packages/cmk-frontend/src/themes/facelift/scss/_more.scss
@charset "UTF-8";
/* stylelint-disable-next-line no-invalid-double-slash-comments */
// Copyright (C) 2019 Checkmk GmbH - License: GNU General Public License v2
// This file is part of Checkmk (https://checkmk.com). It is subject to the terms and
// conditions defined in the file COPYING, which is part of this source code package.

@keyframes fadein {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.show_more_mode {
  display: none;
  opacity: 0;
}

.more {
  .show_more_mode {
    display: block;
    animation: fadein 0s both;
  }

  td.show_more_mode {
    display: table-cell;
  }

  tr.show_more_mode {
    display: table-row;
  }
}

.more.withanimation .show_more_mode {
  animation: fadein 1s both;
}

a.more {
  display: inline-block;
  width: 26px;

  img {
    position: absolute;
    top: 5px;
    width: auto;
    padding: 0;
    margin: 0;
  }
}

/* stylelint-disable-next-line no-duplicate-selectors */
a.more {
  text-decoration: none;

  div.show_less {
    display: none;
  }

  div.show_more {
    display: flex;

    /* stylelint-disable-next-line selector-pseudo-element-colon-notation */
    &:after {
      content: url('../facelift/images/icon_show_more.svg');
    }
  }

  .more & {
    div.show_more {
      display: none;
    }

    div.show_less {
      display: flex;

      /* stylelint-disable-next-line selector-pseudo-element-colon-notation */
      &:after {
        content: url('../facelift/images/icon_show_less.svg');
      }
    }
  }

  &.hidden {
    display: none;
  }

  &.has_text {
    width: auto;
    font-size: $font-size-small;

    &:hover {
      color: $font-color-green;

      div.show_more::after {
        content: url('../facelift/images/icon_show_more_green.svg');
      }

      div.show_less::after {
        content: url('../facelift/images/icon_show_less_green.svg');
      }
    }

    div.show_more,
    div.show_less {
      align-items: center;

      /* stylelint-disable-next-line selector-pseudo-element-colon-notation */
      &:after {
        margin-left: 6px;
      }
    }
  }
}

td .show_more,
td .show_less {
  margin: -3px 0;
}

